nbv_code/ros2_ws2/log/build_2024-11-08_13-07-58/my_robot_nbv/stderr.log
  File "/home/jajayu/TomatoHarvesting_NextBestView/nbv_code/ros2_ws2/install/my_robot_nbv/lib/python3.10/site-packages/my_robot_nbv/nbv_tompcd_filter.py", line 41
    __debug__ = True
    ^^^^^^^^^
SyntaxError: cannot assign to __debug__

